# lib/api-spec/openapi.yaml
@@ -1588,6 +1588,12 @@ components:
           type: ["string", "null"]
         member_gamertag:
           type: ["string", "null"]
+        roster_count:
+          type: integer
+        offense_dev_count:
+          type: integer
+        defense_dev_count:
+          type: integer
 
     TeamInput:
       type: object
